--- a/.eslintrc
+++ b/.eslintrc
@@ -11,11 +11,14 @@
     "quotes": "off",
     "eol-last": "off",
     "linebreak-style": "off",
-    "comma-dangle": "off"
+    "comma-dangle": "off",
+    "react/jsx-uses-react": "off",
+    "react/jsx-uses-vars": "off"
   },
   "extends": [
     "eslint:recommended",
     "google",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended"
   ]
 }
