--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "eslint-plugin-react": "^7.21.5",
     "node-sass": "^4.14.1"
   }
 }
